# brian-lee-819b-mood-ring

./: .env.example  .gitignore  .plan  Makefile  README.md
backend/: Cargo.toml
backend/migrations/: 20260720231300_initial.sql  20260720232200_rooms_participants.sql
backend/src/: config.rs  db.rs  e2e.rs  main.rs  server.rs  state.rs
backend/src/domain/: mod.rs  mood.rs  participant.rs  preset_mood.rs  room.rs
backend/src/routes/: health.rs  mod.rs  realtime.rs  rooms.rs
backend/src/services/: mod.rs  realtime.rs  rooms.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: config.ts  realtime.ts  rooms.ts
frontend/src/components/layout/: RootLayout.tsx
frontend/src/components/mood/: IntensityBlendControl.tsx  MoodInputPanel.tsx  NoteInput.tsx  PostcardMoodView.tsx  PresetSelector.tsx  SharedMoodCanvas.tsx
frontend/src/components/room/: ShareLink.tsx
frontend/src/components/theme/: ThemeSelector.tsx
frontend/src/routes/: HomeRoute.tsx  RoomCreateRoute.tsx  RoomRoute.tsx
frontend/src/state/: AppStateContext.tsx  clientMood.ts  roomIdentity.ts  useRoomMoodSocket.ts
frontend/src/theme/: engine.ts  geometricRenderer.ts  index.ts  organicRenderer.ts  painterlyRenderer.ts  renderer.ts  retroRenderer.ts
frontend/src/types/: index.ts  mood.ts  presetMood.ts
