[package]
name = "mood-ring-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "=0.3.31"
http = "1.4.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "migrate",
    "macros",
    "json",
    "time",
    "uuid",
] }
time = { version = "0.3.54", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tower-http = { version = "0.6.11", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.24.0", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.3", features = ["util"] }
